<resources>
    <string name="app_name">Composition</string>
    <string name="brain_icon_description">Brain Icon</string>
    <string name="btn_start_game">Start</string>
    <string name="choose_level">Выбор Уровня:</string>
    <string name="btn_text_test">ТЕСТОВЫЙ</string>
    <string name="btn_text_easy">ЛЕГКИЙ</string>
    <string name="btn_text_normal">СРЕДНИЙ</string>
    <string name="btn_text_hard">ТЯЖЕЛЫЙ</string>

    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>


    <string name="game_over">Game Over</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
</resources>